# dc-electronic-load

./: .gitignore  flash-package.py  flash-upload.py
docs/: calibration.ods  competition.md  systemDiagram.odg  worksheets.ods
firmware/: .gitignore  CMakeLists.txt  README.md  adc.c  adc.h  base64.c  base64.h  build.sh  buttons.c  buttons.h  contiki-conf.h  dac.c  dac.h  dc-electronic-load.cbp  dc-electronic-load.kdev4  dcElectronicLoad.c  dcElectronicLoad.h  debug.c  debug.h  delay.c  disp6800.c  disp6800.h  enc28j60.c  enc28j60.h  encoder.c  encoder.h  fan.c  fan.h  flashFiles.c  flashFiles.h  flashsst25.c  flashsst25.h  font.h  fontLarge.c  fontLarge.xml  fontSmall.c  fontSmall.xml  fontSmallNumbers.c  fontSmallNumbers.xml  fontXSmall.c  (+32 more)
firmware/contiki/net/: resolv.c  tcpip.h
firmware/tests/: debug.c  mock_stm32.h  stm32f10x_exti.c  stm32f10x_gpio.c  stm32f10x_nvic.c  stm32f10x_rcc.c  test.c
flash-files/: dc-electronic-load.js  index.html  info  ws
flash-files/amps/: set
flash-files/css/: dc-electronic-load.css
flash-files/js/: dc-electronic-load.js  jquery.flot.axislabels.js
flash-files/recorder/: download  start  stop
hardware/: .gitignore  buttons.cmp  buttons.kicad_pcb  buttons.net  buttons.pro  dc-electronic-load.bom.csv  dc-electronic-load.cmp  dc-electronic-load.dcm  dc-electronic-load.kicad_pcb  dc-electronic-load.lib  dc-electronic-load.lib.list  dc-electronic-load.net  dc-electronic-load.pro  dc-electronic-load.sch  fp-lib-table  save-to-kicad-library.sh  stm32cubemx.ioc  update-from-kicad-library.sh
hardware/2014-09-30/: dc-electronic-load-print.gvp  dc-electronic-load.gbl  dc-electronic-load.gbo  dc-electronic-load.gbs  dc-electronic-load.gko  dc-electronic-load.gtl  dc-electronic-load.gto  dc-electronic-load.gts  dc-electronic-load.gvp  dc-electronic-load.txt
hardware/buttons-2014-11-09/: buttons-print.gvp  buttons.gbl  buttons.gbo  buttons.gko  buttons.gtl  buttons.gto  buttons.gts  buttons.gvp  buttons.txt
test-server/: index.js  package.json
